@@ -4,6 +4,12 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/02/16
+	* Updated script commands startnpctimer, stopnpctimer, initnpctimer so you
+	  can attach a player to them, this is done because the attach/detach
+	  functions can't be used to attach to a different script than the one
+	  currently running.
+	* Updated the script_command reference with the new flag values of
+	  [start/stop/init]npctimer.
 	* Modified the "guardian" spawn script command, it no longer receives a
 	  "amount" argument (since that only leads to trouble), if the class is
 	  negative, it'll pick a random class the same way the monster spawn script
